--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@ Other
         .info-section {
            display: flex;
            justify-content: center;
+           align-items: center;
             margin: 0;
             background-color: #f0f0f0;
             
             
         }
         .info-block {
-            width: 30%;
+            width: 20%;
         }
     </style>
 	<body class="is-preload">
