--- a/index.html
+++ b/index.html
@@ -186,20 +186,11 @@ Let <strong>MAKE IT FLOW LLC</strong> be the steady stream that supports you in 
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2>Contact US</h2>
 							</header>
 
 							<form method="post" action="mail.php">
-								<div class="row">
-									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
-									<div class="col-12">
-										<textarea name="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<input type="submit" value="Send Message" />
-									</div>
-								</div>
+								<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdklC7pS0tw1mJexApCu9Vm5bgc__E5r2tUau9B_-xHM2rfMA/viewform?embedded=true" width="540" height="566" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 							</form>
 
 						</div>
